Fix two column post page letter spacing

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -142,6 +142,7 @@ article {
 .two-columns {                                      // `two-columns` selects a `table` inside a post
   td {
     width: 50%;
+    letter-spacing: .125em;
     border: none;
     text-align: left;
     vertical-align: top;
